<?xml version="1.0"?>
<package>
  <name>libsbp</name>
  <version>:{version}</version>
  <description>Switftnav libspb realeases into ROS ecosystem</description>

  <maintainer email="michael.stoll@stolltec.com">Michael Stoll</maintainer>
  <license>LGL3</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>