<?xml version="1.0"?>
<package>
  <name>libsbp</name>
  <version>:{version}</version>
  <description>Switftnav libspb realeases into ROS ecosystem</description>

  <maintainer email="michael.stoll@stolltec.com">Michael Stoll</maintainer>
  <license>LGL3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>